<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello"></string>
    <string name="app_name"> First CALCULATOR </string>
     <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="send_to"> </string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <!-- <string name="ms">MS</string> -->
    <string name="clear">C</string>
    <string name="mc">MC</string>
    <string name="mp">M+</string>
    <!-- <string name="sqt">√</string> -->
    <string name="mr">MR</string>
    <string name="square">^2</string>
    <string name="backspace">←</string>
    <string name="root">√</string>
    
    <!-- <string name="percent">%</string> -->
    <string name="history">HIST</string>
    
    
     <string name="action_about">About</string>
     
  <!--    <string name="mcr">MRC</string>  --> 
    
     
     

</resources>